Updated and marked lib's parts.